--- a/Leadership.html
+++ b/Leadership.html
@@ -20,6 +20,7 @@
 	<body id="top">
 
 		<!-- Header -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 			<header id="header" class="skel-layers-fixed">
 				<h1><a href="index.html">Acadia</a></h1>
 				<nav id="nav">
@@ -106,7 +107,7 @@
 								</a>
 								<h3>Brianne Chard, Director</h3>
 								<h4>Chief Financial Officer</h4>
-								  <p>Brianne is the backbone of Acadia Engineering.&nbsp;&nbsp;</p>
+								  <p>Acadia Engineering Inc. was built on the foundation of Brianne Chard’s financial expertise and entrepreneurial drive. Originally managing the financial operations of a growing engineering division within her previous company, Brianne played a pivotal role in its transition into an independent firm—Acadia Engineering. Her strong accounting background and strategic financial oversight have been instrumental in shaping the company’s stability and growth. Today, Brianne continues to provide the financial leadership that ensures Acadia remains resilient, well-managed, and prepared for the challenges of business ownership.</p>
 </section>
 						</div>
 						<div class="6u">
@@ -116,7 +117,7 @@
 								</a>
 								<h3>Alexander Bridgett</h3>
 								<h4>Vice-President Engineering Design</h4>
-							    <p>Joshua Culp, P. L. Eng. is a Professional Licensee with experience in civil engineering including road design, active transportation, stormwater management, sanitary sewer, water system rehabilitations, and asset management. Josh completed an Advanced Diploma in Civil Engineering Technology in 2014 in Ontario and has been working in BC since 2018.&nbsp;</p>
+							    <p>Alex has been our Designer of the Engineering Dept. since 2021.&nbsp;He is a designated road construction junior inspector with OACETT and working towards his C.E.T. with OACETT..&nbsp;Alex has contributed greatly to Acadia’s projects by utilising his keen eye for detail to embolden the quality of workmanship within our company.</p>
 </section>
 						</div>
 				</div>
