--- a/Project Technologist.html
+++ b/Project Technologist.html
@@ -13,6 +13,7 @@
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
 		<script src="js/nav.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -68,6 +69,7 @@
 			</header>
 
 		<!-- Main -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 			<section id="main" class="wrapper style3">
 				<section class="parallax-banner6">
 					<div class="parallax-bg6"></div>
