--- a/Sustainability.html
+++ b/Sustainability.html
@@ -12,6 +12,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 		<script>
     document.addEventListener("DOMContentLoaded", function () {
         if (window.innerWidth <= 760) {
