--- a/Services.html
+++ b/Services.html
@@ -15,6 +15,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -62,7 +63,6 @@
             <a href="#">Contact</a>
             <ul class="dropdown-menu right-align">
                 <li><a href="Office Locations.html">Office Locations</a></li>
-                <li><a href="Request Quote.html">Request a Quote</a></li>
                 <li><a href="Careers.html">Join Our Team</a></li>
             </ul>
         </li>
