--- a/Corporate Governance.html
+++ b/Corporate Governance.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+		<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 		<title>Corporate Governance - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
