--- a/Water Engineer.html
+++ b/Water Engineer.html
@@ -2,7 +2,8 @@
 
 <html>
 	<head>
-		<title>Corporate Governance - Acadia</title>
+		<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+		<title>Water Resource Engineer - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="" />
