--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
-	<head>
+<html><head>
 		<title>Acadia</title>
 		<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -12,6 +11,8 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
+		<script src="js/hover.js"></script>
+		
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
