--- a/Water Engineer.html
+++ b/Water Engineer.html
@@ -14,6 +14,7 @@
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
 		<script src="js/nav.js"></script>
+		<script src="js/hover.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
