--- a/Our Company.html
+++ b/Our Company.html
@@ -33,8 +33,7 @@
             <a href="#">About Us</a>
             <ul class="dropdown-menu">
                 <li><a href="Our Company.html">Overview</a></li>
-                <li><a href="Leadership.html">Leadership</a></li>
-                <li><a href="Board of Directors.html">Board of Directors</a></li>
+                <li><a href="Leadership.html">Leadership &amp; Senior Staff</a></li>
                 <li><a href="Corporate Governance.html">Corporate Governance</a></li>
                 <li><a href="Sustainability.html">Sustainability</a></li>
                 <li><a href="First Nations.html">First Nations</a></li>
@@ -79,7 +78,7 @@
 <h2>Our History</h2>
 <p>Acadia Engineering started as Equity Property Management in Belleville, Ontario. Equity was focused on real estate holdings and land development engineering.&nbsp;</p>
 <p>In 2021 Equity rebranded as Acadia Engineering, and started its growth trajectory, with its operations focused on the Greater Toronto Area (GTA) and Eastern Ontario.&nbsp;&nbsp;</p>
-<p>&nbsp;Acadia branched into the British Columbia market in 2025, adding 3 new offices and offering our great services to more clients.</p>
+<p>Acadia branched into the British Columbia market in 2025, adding 3 new offices and offering our great services to more clients.</p>
                           </section>
 </div>
 						<div class="8u skel-cell-important">
