--- a/Sustainability.html
+++ b/Sustainability.html
@@ -41,8 +41,7 @@
             <a href="#">About Us</a>
             <ul class="dropdown-menu">
                 <li><a href="Our Company.html">Overview</a></li>
-                <li><a href="Leadership.html">Leadership</a></li>
-                <li><a href="Board of Directors.html">Board of Directors</a></li>
+                <li><a href="Leadership.html">Leadership &amp; Senior Staff</a></li>
                 <li><a href="Corporate Governance.html">Corporate Governance</a></li>
                 <li><a href="Sustainability.html">Sustainability</a></li>
                 <li><a href="First Nations.html">First Nations</a></li>
