--- a/Leadership & Senior Staff.html
+++ b/Leadership & Senior Staff.html
@@ -122,6 +122,11 @@
 						</div>
 				</div>
 			</section>
+				<div>
+					<hr class="major" />
+					 <div class="align-center">
+						<h2><strong>Senior Staff</strong></h2> 
+    </div>
 <div class="row">
 						<div class="6u">
 							<section class="special">
