Update Board of Directors.html

--- a/Board of Directors.html
+++ b/Board of Directors.html
@@ -32,7 +32,7 @@
             <a href="#">About Us</a>
             <ul class="dropdown-menu">
                 <li><a href="Our Company.html">Overview</a></li>
-                <li><a href="Leadership.html">Leadership &amp; Senior Staff</a></li>
+                <li><a href="Leadership & Senior Staff.html">Leadership &amp; Senior Staff</a></li>
 				<li><a href="Corporate Governance.html">Corporate Governance</a></li>
 				<li><a href="Sustainability.html">Sustainability</a></li>
 				<li><a href="First Nations.html">First Nations</a></li>
