--- a/Office Locations.html
+++ b/Office Locations.html
@@ -26,7 +26,7 @@
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-				<h1><a href="#">Acadia</a></h1>
+				<h1><a href="index.html">Acadia</a></h1>
 					<nav id="nav">
     <ul>
         <li><a href="index.html">Home</a></li>
