--- a/Municipal Engineering.html
+++ b/Municipal Engineering.html
@@ -85,10 +85,11 @@
     <img src="images/muni1.jpeg" alt="Urban and Rural Roads">
     <div class="overlay3">
         <h2>Potable Water</h2>
-<li>Potable Water System Design & Upgrades</li>
-                    <li>Pump Station & Reservoir Design</li>
-                    <li>Watermain Replacement & Expansion</li>
-                    <li>Hydraulic Modeling & System Analysis</li>
+<li>Potable Water System Design &amp; Upgrades</li>
+                    <li>Water System Design &amp; Upgrades</li>
+					<li>Pump Station &amp; Reservoir Design</li>
+                    <li>Watermain Replacement &amp; Expansion</li>
+                    <li>Hydraulic Modeling &amp; System Analysis</li>
 
     </div>
 </div>
@@ -97,10 +98,12 @@
     <img src="images/muni2.jpeg" alt="Highways">
     <div class="overlay3">
         <h2>Sanitary</h2>
-<li>Potable Water System Design & Upgrades</li>
-                    <li>Pump Station & Reservoir Design</li>
-                    <li>Watermain Replacement & Expansion</li>
-                    <li>Hydraulic Modeling & System Analysis</li>
+<li>Sanitary System Design &amp; Upgrades</li>
+                    <li>Sanitary Sewer Collection System Design</li>
+                    <li>Sewer Lift Station &amp; Forcemain Design</li>
+                    <li>Inflow &amp; Infiltration Reduction Strategies</li>
+					 <li>Sewer System Rehabilitation &amp; Expansion</li>
+					 <li>Wastewater Hydraulic Modeling &amp; Analysis</li>
 
     
   </div>
@@ -111,9 +114,11 @@
     <div class="overlay3">
         <h2>Stormwater management</h2>
 <li>Stormwater Management Plans</li>
-                    <li>Flood Risk Assessments & Mitigation</li>
-                    <li>Storm Sewer & Culvert Design</li>
+                    <li>Stormwater Management Plans</li>
+					<li>Flood Risk Assessments &amp; Mitigation</li>
+                    <li>Storm Sewer &amp; Culvert Design</li>
                     <li>Low Impact Development (LID) Solutions</li>
+					<li>Erosion and Sediment Control (ESC)</li>
                 </ul>
   </div>
 </div>
