--- a/Project TechnologistS.html
+++ b/Project TechnologistS.html
@@ -4,6 +4,7 @@
 	<head>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 		<title>Project Technologist - Acadia</title>
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="" />
