--- a/Project Technologist.html
+++ b/Project Technologist.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>Project Technologist - Acadia</title>
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="" />
