--- a/Project Manager.html
+++ b/Project Manager.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 		<title>Project Manager - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
