--- a/Leadership & Senior Staff.html
+++ b/Leadership & Senior Staff.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>Leadership - Acadia</title>
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
