--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Acadia</title>
-		<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
