--- a/Transportation Engineering.html
+++ b/Transportation Engineering.html
@@ -5,8 +5,8 @@
 		<title>Transportation Engineering - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering provides transportation engineering services, including highway design, road rehabilitation, traffic modeling, and active transportation planning." />
+		<meta name="keywords" content="transportation engineering, highway design, road rehabilitation, traffic modeling, active transportation, intersection design, urban planning, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
