--- a/Sustainability.html
+++ b/Sustainability.html
@@ -5,8 +5,8 @@
 		<title>Sustainability - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering is committed to sustainability, carbon neutrality, and eco-friendly engineering solutions, including LID and climate-resilient infrastructure." />
+		<meta name="keywords" content="sustainable engineering, carbon neutrality, environmental stewardship, low impact development, climate resilience, eco-friendly infrastructure, Acadia Engineering" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
