--- a/Water Engineer.html
+++ b/Water Engineer.html
@@ -6,8 +6,8 @@
 		<title>Water Resource Engineer - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering is hiring a Water Resource Engineer in Vancouver, BC. Join our team to work on stormwater management, watershed analysis, and flood risk assessments." />
+		<meta name="keywords" content="Water Resource Engineer job, stormwater management, watershed analysis, flood risk assessment, erosion control, hydraulic modeling, Vancouver BC, Acadia Engineering careers" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
