--- a/Water.html
+++ b/Water.html
@@ -5,8 +5,8 @@
 		<title>Water Resources - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering specializes in water resources, including stormwater management, watershed analysis, erosion control, and sustainable water supply solutions in BC & Ontario." />
+		<meta name="keywords" content="water resources engineering, stormwater management, watershed analysis, flood risk assessment, erosion control, water supply design, sustainability, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
