--- a/Services.html
+++ b/Services.html
@@ -9,8 +9,8 @@
 		<title>Services - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Explore Acadia Engineering’s civil engineering services, including municipal engineering, land development, project management, and contract administration in BC & Ontario." />
+		<meta name="keywords" content="civil engineering services, municipal engineering, land development, project management, contract administration, transportation engineering, Acadia Engineering, BC, Ontario, recommended" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
