--- a/Services-Transportation.html
+++ b/Services-Transportation.html
@@ -9,8 +9,8 @@
 		<title>Services - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering provides expert transportation engineering services, including traffic modeling, active transportation, and intersection design in BC & Ontario." />
+		<meta name="keywords" content="transportation engineering, traffic modeling, active transportation, urban roadways, rural roadways, intersection design, roundabout design, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
