--- a/Services-Municipal.html
+++ b/Services-Municipal.html
@@ -9,8 +9,8 @@
 		<title>Services - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering specializes in municipal engineering, including water distribution, wastewater management, road rehabilitation, and infrastructure renewal in BC & Ontario." />
+		<meta name="keywords" content="municipal engineering, water distribution, wastewater management, stormwater management, road rehabilitation, infrastructure renewal, asset management, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
