--- a/Project TechnologistS.html
+++ b/Project TechnologistS.html
@@ -7,8 +7,8 @@
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering is hiring a Project Technologist in Squamish, BC. Join a dynamic team working on land development & municipal engineering projects." />
+		<meta name="keywords" content="Project Technologist job, civil engineering jobs, land development, AutoCAD Civil 3D, municipal engineering, Squamish BC, Acadia Engineering careers" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
