--- a/Project Technologist.html
+++ b/Project Technologist.html
@@ -6,8 +6,8 @@
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering is hiring a Project Technologist in Belleville, ON. Apply now for this full-time civil design role in municipal and land development projects." />
+		<meta name="keywords" content="Project Technologist job, civil designer job, engineering careers, land development, municipal engineering, AutoCAD, Civil 3D, Acadia Engineering, Belleville ON" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
