--- a/Project Manager.html
+++ b/Project Manager.html
@@ -7,8 +7,8 @@
 		<title>Project Manager - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering is hiring a Civil Engineer / Project Manager in Belleville, ON. Apply now for this full-time engineering role in land development & municipal projects." />
+		<meta name="keywords" content="civil engineer job, project manager job, engineering careers, land development, municipal engineering, Acadia Engineering, Belleville ON" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
