--- a/Project Management.html
+++ b/Project Management.html
@@ -9,8 +9,8 @@
 		<title>Project Management - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering provides expert project management services in BC & Ontario, ensuring cost control, risk management, and quality assurance." />
+		<meta name="keywords" content="project management, engineering project planning, cost control, risk management, quality assurance, permitting, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
