--- a/Our Company.html
+++ b/Our Company.html
@@ -5,8 +5,8 @@
 		<title>Our Company - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Learn about Acadia Engineering—our history, values, and commitment to sustainable civil engineering in BC & Ontario. Discover our mission and expertise." />
+		<meta name="keywords" content="Acadia Engineering, company history, civil engineering, sustainable engineering, infrastructure solutions, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
