--- a/Office Locations.html
+++ b/Office Locations.html
@@ -9,8 +9,8 @@
 		<title>Contact Us - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Find Acadia Engineering offices in Vancouver, Ladysmith, Squamish, and Belleville. Contact us for civil engineering services in BC & Ontario." />
+		<meta name="keywords" content="Acadia Engineering offices, contact Acadia Engineering, Vancouver office, Ladysmith office, Squamish office, Belleville office, BC, Ontario, civil engineer, transportation engineer, municipal engineer, land development engineer" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
