--- a/Municipal Engineering.html
+++ b/Municipal Engineering.html
@@ -5,8 +5,8 @@
 		<title>Municipal Engineering - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering provides municipal engineering solutions in BC & Ontario, including potable water, sanitary systems, culvert and stormwater management." />
+		<meta name="keywords" content="municipal engineering, potable water design, sanitary system upgrades, stormwater management, hydraulic modeling, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
