Update Leadership & Senior Staff.html

--- a/Leadership & Senior Staff.html
+++ b/Leadership & Senior Staff.html
@@ -2,11 +2,11 @@
 
 <html>
 	<head>
-		<title>Leadership - Acadia</title>
+		<title>Leadership &amp; Senior Staff - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Meet Acadia Engineering’s leadership team and senior staff. Experts in civil engineering, project management, and engineering asset management BC & Ontario." />
+		<meta name="keywords" content="Acadia Engineering leadership, senior staff, engineering management, civil engineers, project managers, asset management, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
