--- a/Land Development.html
+++ b/Land Development.html
@@ -2,11 +2,11 @@
 
 <html>
 	<head>
-		<title>Land Development - Acadia</title>
+		<title>Land Development Engineering - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Expert land development services for single-family, multi-family, commercial, and industrial projects in BC & Ontario. Zoning, site servicing, and permitting." />
+		<meta name="keywords" content="land development, zoning analysis, site servicing, subdivision planning, stormwater management, traffic impact studies, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
