--- a/Innovation.html
+++ b/Innovation.html
@@ -5,8 +5,8 @@
 		<title>Innovation - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Discover Acadia Engineering’s cutting-edge innovations in smart infrastructure, digital twins, AI, drones, and Python-driven automation for engineering." />
+		<meta name="keywords" content="engineering innovation, smart infrastructure, digital twin, AI in engineering, drones, predictive modeling, Python automation, GIS, 3D modeling" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
@@ -78,7 +78,7 @@
     <!-- Glass Cards Section -->
     <section class="glass" style="padding: 40px; text-align: center;">
         <h3>Our Cutting-Edge Solutions</h3>
-        <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
+        <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px; flex-wrap: wrap;">
             <div class="glass" style="padding: 20px; width: 250px;">
                 <h4>Smart Infrastructure</h4>
                 <p>Using IoT and AI for smarter urban planning.</p>
