--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering provides expert civil engineering solutions across BC & Ontario. Specializing in land development, water resources, transportation, contract administration, project management, survey and municipal projects." />
+		<meta name="keywords" content="civil engineering, transporation engineering land development, water resource engineering, municipal engineering, BC, Ontario, consulting engineers, project management, contract administration, MMCD, CCDC" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
