--- a/First Nations.html
+++ b/First Nations.html
@@ -7,8 +7,8 @@
 		<title>First Nations - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering partners with First Nations communities in BC & Ontario, providing sustainable infrastructure, water systems, and land development." />
+		<meta name="keywords" content="First Nations partnerships, Indigenous engineering, sustainable development, land development, water systems, community infrastructure, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
