--- a/Corporate Governance.html
+++ b/Corporate Governance.html
@@ -6,8 +6,8 @@
 		<title>Corporate Governance - Acadia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Discover Acadia Engineering’s corporate governance framework, ensuring ethical leadership, transparency, regulatory compliance, and sustainability." />
+		<meta name="keywords" content="corporate governance, ethical leadership, transparency, accountability, regulatory compliance, risk management, sustainability, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
