--- a/Contract Administration.html
+++ b/Contract Administration.html
@@ -9,8 +9,8 @@
 		<title>Contract Admin - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Acadia Engineering provides expert Contract Administration services, including MMCD & CCDC contract management, site inspections, and risk mitigation." />
+		<meta name="keywords" content="contract administration, MMCD, CCDC, tender preparation, construction contracts, site inspections, risk management, dispute resolution, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
