--- a/Careers.html
+++ b/Careers.html
@@ -5,8 +5,8 @@
 		<title>Careers - Acadia</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Join Acadia Engineering! We offer exciting civil engineering careers in BC & Ontario. Explore job openings for engineers, project managers, and technologists." />
+		<meta name="keywords" content="civil engineering jobs, engineering careers, project manager jobs, water resources engineer, land development careers, BC, Ontario" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
